<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"
            android:textSize="20sp" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_pet_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_task_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Breed field -->
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <EditText
        android:id="@+id/edit_pet_breed"
        style="@style/EditorFieldStyle"
        android:layout_height="200dp"
        android:gravity="top|left"
        android:hint="@string/hint_task_description"
        android:padding="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_priority"
            android:textSize="20sp" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_time"
            android:textSize="20sp" />

        <!-- Input fields -->

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_pet_weight"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_task_time"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="25sp" />

            <!-- Units for weight (kg) -->
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/status"
            style="@style/CategoryStyle"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/done"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pending_task"
            android:textColor="@color/red_highPriority"
            android:textSize="25sp" />

    </LinearLayout>
</LinearLayout>